# erpnext_jordan_invoicing

./: MANIFEST.in  README.md  pyproject.toml  setup.py
erpnext_jofotara/: hooks.py  install.py  modules.txt
erpnext_jofotara/api/: client.py  invoices.py  transform.py
erpnext_jofotara/erpnext_jofotara/doctype/jofotara_settings/: jofotara_settings.json
erpnext_jofotara/jofotara/doctype/jofotara_settings/: jofotara_settings.js  jofotara_settings.json
